# imageasy

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  imgui.ini  run.sh
include/: stb_image.h
src/: main.cc
src/app/: app.cc  app.hpp
src/core/: blur_effect.cc  blur_effect.hpp  contrast_effect.cc  contrast_effect.hpp  fft.hpp  image_effect.hpp  pipeline.cc  pipeline.hpp  shaders.cc  shaders.hpp
src/core/shaders/: blur_horizontal.glsl  blur_vertical.glsl  contrast_compute.glsl  fragment_bg.glsl  vertex_bg.glsl
src/core/shaders/blur/: blur_fragment.glsl  blur_vertex.glsl  horizontal_blur_fragment.glsl  vertical_blur_fragment.glsl
src/gui/: canvas_widget.cc  canvas_widget.hpp  gui.cc  gui.hpp  image_loader_widget.cc  image_loader_widget.hpp  load_image_tool.cc  load_image_tool.hpp  tool_canvas.cc  tool_canvas.hpp  widget.hpp
src/gui/tools/: blur_image_tool.cc  blur_image_tool.hpp  load_image_tool.cc  load_image_tool.hpp
